--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -21,6 +21,8 @@
 
   <extensions defaultExtensionNs="com.intellij">
     <!-- Add your extensions here -->
+    <fileTypeFactory implementation="cpptool.CppFileTypeFactory"/>
+    <lang.syntaxHighlighterFactory implementationClass="cpptool.CppSyntaxHighlighterFactory" language="C/C++"/>
   </extensions>
 
   <actions>
