add color setting dlg
增加配色配置窗口

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -23,6 +23,7 @@
     <!-- Add your extensions here -->
     <fileTypeFactory implementation="cpptool.CppFileTypeFactory"/>
     <lang.syntaxHighlighterFactory implementationClass="cpptool.CppSyntaxHighlighterFactory" language="C/C++"/>
+    <colorSettingsPage implementation="cpptool.CppColorSettingsPage"/>
   </extensions>
 
   <actions>
