--- a/build.gradle
+++ b/build.gradle
@@ -18,22 +18,22 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk11"
     implementation 'com.github.ballerina-platform:lsp4intellij:0.91.0'
     compile group: 'net.java.dev.jna', name: 'jna', version: '5.4.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile fileTree(dir: 'libs', includes: ['*jar'])
+    compile fileTree(dir: 'libs', includes: ['*jar','*dylib','*dll'])
 }
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version '2019.1.3'
+    version '2019.2.1'
 }
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = "11"
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = "11"
 }
 patchPluginXml {
     changeNotes """
